--- a/Examples/Podfile
+++ b/Examples/Podfile
@@ -2,5 +2,5 @@ platform :ios, '11'
 project 'Simple Integration.xcodeproj'
 target 'Simple Integration' do
   use_frameworks!
-  pod 'NISdk', :path => '../'
+  pod 'NISdk'
 end
